--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.34.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "typescript": "^4.1.2",
